[package]
name = "mpc-ristretto"
description = "A library for performing secure multiparty computation using the Ristretto group."
version = "0.1.0"
keywords = ["mpc", "crypto", "cryptography"]
homepage = "https://renegade.fi"
authors = ["Joey Kraut <joey@renegade.fi>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/renegade-fi/mpc-ristretto"
license = "MIT OR Apache-2.0"

[lib]
name = "mpc_ristretto"
path = "src/lib.rs"

[[test]]
name = "integration"
path = "integration/main.rs"
harness = false

[dependencies]
# == Async == #
async-std = "1.12"
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.12", features = ["macros", "rt-multi-thread"] }

# == Arithemtic + Crypto == #
ark-ec = "0.4"
ark-ff = "0.4"
ark-serialize = "0.4"
digest = "0.10"
num-bigint = "0.4"
rand = "0.8"
sha3 = { version = "0.8" }
subtle = "2.4.1"

# == Networking + Messaging == # 
rcgen = "0.9"
rustls = { version = "0.20", features = ["dangerous_configuration"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quinn = { version = "0.9", features = ["tls-rustls", "native-certs"] }

# == Misc == #
bytes = "1.2"
clear_on_drop = "0.2"
itertools = "0.10"
lazy_static = "1.4"
tracing = { version = "0.1", features = ["log"] }
zeroize = "1.3"

[dev-dependencies]
clap = { version = "3.2.8", features = ["derive"] }
colored = "2"
dns-lookup = "1.0"
env_logger = "0.10"
inventory = "0.3"
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "655af56" }
starknet-curve = { git = "https://github.com/xJonathanLEI/starknet-rs", rev = "655af56" }