[package]
name = "ark-mpc"
version = "0.1.2"
description = "Malicious-secure SPDZ style two party secure computation"
keywords = ["mpc", "crypto", "cryptography"]
homepage = "https://renegade.fi"
authors = ["Joey Kraut <joey@renegade.fi>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/renegade-fi/ark-mpc"
license = "MIT OR Apache-2.0"

[lib]
name = "ark_mpc"
path = "src/lib.rs"

[features]
benchmarks = []
stats = ["benchmarks"]
test_helpers = ["ark-bn254"]

[[test]]
name = "integration"
path = "integration/main.rs"
harness = false
required-features = ["test_helpers"]

[profile.bench]
opt-level = 3
lto = true
debug = true

[[bench]]
name = "circuit_mul_throughput"
harness = false
required-features = ["benchmarks", "test_helpers"]

[[bench]]
name = "circuit_msm_throughput"
harness = false
required-features = ["benchmarks", "test_helpers"]

[[bench]]
name = "gate_throughput_traced"
harness = false
required-features = ["benchmarks", "test_helpers"]

[[bench]]
name = "gate_throughput"
harness = false
required-features = ["benchmarks", "test_helpers"]

[[bench]]
name = "growable_buffer"
harness = false
required-features = ["benchmarks"]

[[bench]]
name = "native_msm"
harness = false

[[bench]]
name = "test_stats"
harness = false
required-features = ["benchmarks", "stats", "test_helpers"]

[dependencies]
# == Concurrency == #
async-trait = "0.1"
crossbeam = "0.8"
futures = "0.3"
kanal = "0.1.0-pre8"
tokio = { version = "1.12", features = ["macros", "rt-multi-thread"] }

# == Arithemtic + Crypto == #
ark-bn254 = { version = "0.4", optional = true }
ark-ec = { version = "0.4", features = ["parallel"] }
ark-ff = "0.4"
ark-poly = { version = "0.4", features = ["std", "parallel"] }
ark-serialize = "0.4"
ark-std = "0.4"
digest = "0.10"
num-bigint = "0.4"
rand = "0.8"
sha3 = { version = "0.10" }

# == Networking + Messaging == # 
rcgen = "0.9"
rustls = { version = "0.20", features = ["dangerous_configuration"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quinn = { version = "0.9", features = ["tls-rustls", "native-certs"] }

# == Misc == #
bytes = "1.2"
itertools = "0.10"
rustc-hash = "1.1"
tracing = { version = "0.1", features = ["log"] }
zeroize = "1.3"

[dev-dependencies]
clap = { version = "3.2.8", features = ["derive"] }
colored = "2"
criterion = { version = "0.5", features = ["async", "async_tokio"] }
cpuprofiler = "0.0.4"
dns-lookup = "1.0"
env_logger = "0.10"
gperftools = { version = "0.2", features = ["heap"] }
inventory = "0.3"
