[package]
name = "mp-spdz-rs"
version = "0.1.0"
edition = "2021"

[features]
test-helpers = []

[dependencies]
# === Arithmetic + Crypto === #
ark-ec = { version = "0.4", features = ["parallel"] }
ark-ff = { version = "0.4", features = ["parallel"] }
ark-mpc = { path = "../online-phase" }

# === Bindings === #
cxx = "1.0"

[build-dependencies]
cxx-build = "1.0"
itertools = "0.12.0"
pkg-config = "0.3"

[dev-dependencies]
ark-bn254 = "0.4"
rand = "0.8.4"
